testsuite/escript/errors/errors005-missing-open-paren.err2
errors005-missing-open-paren.src:6:40: error: extraneous input ')' expecting ';'